fix bug for categories info box. Now it's z-index is above all emements

--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -56,3 +56,6 @@
 	background-color: azure;
 	margin-left: 10px;
 }
+span.select2-dropdown--above{
+	z-index: 10000;
+}
